snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.module.sha512
ecb394740463c9ae5195ee8e516a48874a9716c241305fea0409118690af625f293e5732c19e2d90bd5ed465884f688460d58db0d6e097e654c45f8807715a3b